--- a/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
+++ b/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
@@ -393,5 +393,17 @@
     <ClCompile Include="1977.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1620.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="6588.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="9465.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2156.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
