--- a/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
+++ b/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
@@ -492,5 +492,8 @@
     <ClCompile Include="11723.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10830.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
