--- a/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj
+++ b/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj
@@ -637,7 +637,10 @@
     <ClCompile Include="codeground_scpc1_1.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="codeground_scpc1_2.cpp" />
+    <ClCompile Include="codeground_scpc1_2.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="codeground_scpc_1_3.cpp" />
     <ClCompile Include="codeground_subarray.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
