--- a/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
+++ b/Algorithm Practice/Algorithm Practice/Algorithm Practice.vcxproj.filters
@@ -684,5 +684,17 @@
     <ClCompile Include="7576.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9019.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="kakao_1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="kakao_2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="kakao_5.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
